got the svelte up and running and salmon cookies files loaded

--- a/public/salmon/index.html
+++ b/public/salmon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Salmon Cookies Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
 </head>
@@ -13,8 +13,8 @@
     </div>
 
     <div id="nav"> 
-        <a href="sales.html">Daily Sales</a>
-        <a href="stores.html">All Locations</a>
+        <a href="./sales.html">Daily Sales</a>
+        <a href="./stores.html">All Locations</a>
     </div>
 
     <div id="main">
