--- a/public/salmon/sales.html
+++ b/public/salmon/sales.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <title>Daily Cookie Sales</title>
-    <link href="css/sales_style.css" rel="stylesheet">
+    <link href="./css/sales_style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Daily Cookie Sales</h1>
-        <a href="index.html">Back to Home</a> 
+        <a href="./index.html">Back to Home</a> 
     </header>
     <main>
         <br><br>
