--- a/public/salmon/stores.html
+++ b/public/salmon/stores.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <title>All Locations</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1 id="stores">All Locations</h1>
-        <a href="index.html">Back to Home</a> 
+        <a href="./index.html">Back to Home</a> 
     </header>
     <main>
         <div>
